apps/ittools/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ittools
  namespace: ittools
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ittools.home.daandewilde.be`)
      kind: Rule
      middlewares:
        - name: pocket-id-users
          namespace: kube-system
      services:
        - name: ittools-it-tools
          port: 80
  tls: {}
